<resources>
    <string name="app_name">Mentor/Mentee match</string>

    //architecture_program
    <string name="Show_selected_items">Show selected items</string>
    <string name="done">done</string>
    <string name="submit">submit</string>


    //first_activity
    <string name="log_in">Login</string>
    <string name="sign_up">Sign Up</string>

    //log_in
    <string name="username">username</string>
    <string name="password">password</string>
    <string name="forgot_username">forgot username</string>
    <string name="forgot_password">forgot password</string>
    <string name="back">Back</string>
    <string name="next">Next</string>

    //main_app
    <string name="profile">profile</string>

    //profile
    <string name="Mentor">Mentor</string>
    <string name="Mentee">Mentee</string>
    <string name="auto_first_name_last_name">First Name Last Name</string>

    <string-array name="gender">
        <item>gender</item>
        <item>female</item>
        <item>male</item>
        <item>other</item>
    </string-array>

    <string name="date_of_birth">Date of Birth</string>

    <string-array name="birthday_month">
        <item>Month</item>
        <item>January</item>
        <item>February</item>
        <item>March</item>
        <item>April</item>
        <item>May</item>
        <item>June</item>
        <item>July</item>
        <item>August</item>
        <item>September</item>
        <item>October</item>
        <item>November</item>
        <item>December</item>
    </string-array>

    <string-array name="class_year">
        <item>select class year</item>
        <item>Freshman</item>
        <item>Sophomore</item>
        <item>Junior</item>
        <item>Senior</item>
        <item>Graduate Student</item>
    </string-array>

    //profile_major
    <string name="select_program">Select Program</string>
    <string name="school_of_architecture">School of Architecture</string>
    <string name="school_of_engineering">School of Engineering</string>
    <string name="school_of_humanities_arts_social_sciences">School of Humanities,Arts,and Social Sciences</string>
    <string name="school_of_management">School of Management</string>
    <string name="school_of_science">School of Science</string>
    <string name="informational_technology">Informational Technology</string>

    //sign_up
    <string name="school_code">School Code</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="confirm_password">confirm password</string>
    <string name="email_address">email address</string>


</resources>
